syntax = "proto3";

package system;

import "buf/validate/validate.proto";

option go_package = "github.com/werbot/werbot/internal/core/system/proto/system";

service SystemHandlers {
  rpc UserMetrics(UserMetrics.Request) returns (UserMetrics.Response) {}

  rpc Countries(Countries.Request) returns (Countries.Response) {}
  rpc CountryByIP(CountryByIP.Request) returns (CountryByIP.Response) {}
}

// rpc UserMetrics
message UserMetrics {
  message Request {
    bool is_admin = 1; // @gotags: json:"-"
    string user_id = 2 [(buf.validate.field).string.uuid = true]; // @gotags: json:"-"
  }

  message Response {
    int32 users = 1;
    int32 projects = 2;
    int32 schemes = 3;
  }
}
// -----------------------------------------------------

// rpc GetInfo
message Countries {
  message Request {
    string name = 1 [(buf.validate.field).string.min_len = 3, (buf.validate.field).required = true];
  }

  message Response {
    repeated Country countries = 1;
  }

  message Country {
    string code = 1;
    string name = 2;
  }
}
// -----------------------------------------------------

// rpc CountryByIP
message CountryByIP {
  message Request {
    string ip = 1 [(buf.validate.field).string.ip = true, (buf.validate.field).required = true];
  }
  message Response {
    string name = 1;
    string code = 2;
  }
}
// -----------------------------------------------------
